Fixed bug with footer overlapping content and minor CSS-code updates

--- a/Lanthanum.Web/wwwroot/css/site.css
+++ b/Lanthanum.Web/wwwroot/css/site.css
@@ -66,16 +66,53 @@ body {
     min-height: 100vh;
 }
 
-/* Footer styles start*/
-#footer-divider {
-    background: #D8D8D8;
-    border: 1px solid #B2B2B2;
-}
+/* Footer styles start */
+
 .footer {
     position: absolute;
     bottom: 0;
     white-space: nowrap;
     line-height: 60px; /*Vertically center the text there*/
+}
+
+#footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 1rem;
+}
+
+#footer-divider {
+    background: #D8D8D8;
+    border: 1px solid #B2B2B2;
+}
+
+.footer-tab-title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height, or 119% */
+    color: #000000;
+}
+
+.footer-tab-link {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height */
+    color: #7F7B7B;
+}
+
+#footer-newsletter-description {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height */
+    /* Text color */
+    color: #434C5D;
 }
 
 .form-control::placeholder {
@@ -92,68 +129,6 @@ body {
 
 .form-control:focus {
     box-shadow: none;
-}
-
-.footer-copyright {
-    background-color: #D72130;
-    color: #FFFBFB;
-}
-
-#footer-copyright-logo {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 28px;
-    /* identical to box height, or 127% */
-
-
-    color: #FFFBFB;
-
-
-}
-
-.footer-copyright-text {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 16px;
-    /* identical to box height */
-
-    text-align: right;
-    color: #FFFBFB;
-}
-
-.footer-tab-title {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    /* identical to box height, or 119% */
-
-
-    color: #000000;
-}
-
-.footer-tab-link {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    /* identical to box height */
-
-
-    color: #7F7B7B;
-}
-
-#footer-newsletter-description {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    /* identical to box height */
-    /* Text color */
-
-    color: #434C5D;
 }
 
 #footer-newsletter-form {
@@ -189,9 +164,28 @@ body {
     outline: none;
 }
 
-#footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    height: 2.5rem;
+.footer-copyright {
+    background-color: #D72130;
+    color: #FFFBFB;
 }
+
+#footer-copyright-logo {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 28px;
+    /* identical to box height, or 127% */
+    color: #FFFBFB;
+}
+
+.footer-copyright-text {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    /* identical to box height */
+    text-align: right;
+    color: #FFFBFB;
+}
+
+/* Footer styles end */
